<resources>
    <string name="app_name">SmartFire</string>
    <string name="action_settings">Settings</string>
    <string name="select">Click REGISTER for first time user | Click LOGIN if you have registered</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="deviceID">Device ID</string>
    <string name="temppswd">Temporary Password</string>
    <string name="newpassword">New Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fillform">Fill in the form below:</string>
    <string name="clickToRegister">Click here to register</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phoneNo">Telephone Number</string>
    <string name="updateProfile">Update Profile</string>
    <string name="sensorstatus">Sensor Status</string>
    <string name="gasstatus">Gas Status</string>
    <string name="lpgstatus">LPG Status</string>
    <string name="smokestatus">Smoke Status</string>
    <string name="smokesensor">Smoke Sensor</string>
    <string name="heatsensor">Heat Sensor</string>
    <string name="gassensor">Gas Sensor</string>
    <string name="profilepage">My Profile</string>
    <string name="turnoffbuzzer">Turn Off Buzzer</string>
    <string name="updateprofile">Update Profile</string>
    <string name="savedetails">Save Details</string>
    <string name="firesensor">Fire Sensor</string>
    <string name="firestatus">Fire Status</string>
    <string name="livestreaming">Live Streaming</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="call999">Call 999</string>
    <string name="firescale">Scale of Fire</string>
    <string name="firelog">Fire Log</string>
    <string name="updatepassword">Update Password</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="new_activity">new_activity</string>
    <string name="scan">Scan QR Code</string>
    <string name="logoutyes">Are you sure you want to logout?</string>
    <string name="imagedata">Image Data</string>
    <string name="readinglpg">LPG Reading</string>
    <string name="readingsmoke">Smoke Reading</string>
    <string name="readingheat">Heat Reading</string>
    <string name="readingtemp">Temp Reading</string>
    <string name="readinggas">Gas Reading</string>
    <string name="notifications_admin_channel_name">test</string>
    <string name="notifications_admin_channel_description">testttt</string>
</resources>