<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >
    <!--android:background="@drawable/bg2">-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firestatus"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp">

        <TextView
            android:id="@+id/heat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heatsensor"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/reading_lpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lpgstatus"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/smoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smokesensor"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_smoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasstatus"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gassensor"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasstatus"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

</LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/turnoffbuzzer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="@string/turnoffbuzzer"-->
        <!--android:layout_marginBottom="150dp"-->
        <!--android:textColor="@color/white"-->
        <!--android:background="@drawable/btn_pink"/>-->

</RelativeLayout>