<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >
    <!--android:background="@drawable/bg2">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp">

    <TextView
        android:id="@+id/image_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagedata"
        android:textSize="15dp"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/image_data"
        android:layout_width="370dp"
        android:layout_height="250dp"
       />

        <TextView
            android:id="@+id/reading_smoke_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readingsmoke"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_smoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingsmoke"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_lpg_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readinglpg"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_lpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readinglpg"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/reading_temp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readingtemp"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readingtemp"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/reading_gas_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readinggas"
            android:textSize="15dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/reading_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readinggas"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

</LinearLayout>
</ScrollView>